Update output examples

--- a/plugins/active_directory_ldap/plugin.spec.yaml
+++ b/plugins/active_directory_ldap/plugin.spec.yaml
@@ -404,6 +404,7 @@ actions:
         description: Overall operation status
         type: boolean
         required: false
+        example: True
   disable_user:
     title: Disable
     description: Disable an account
