Upgrade from komand to insightconnect runtime

--- a/plugins/thehive/Dockerfile
+++ b/plugins/thehive/Dockerfile
@@ -1,21 +1,17 @@
-FROM komand/python-2-27-slim-plugin:3
-# Refer to the following documentation for available SDK parent images: https://docs.rapid7.com/insightconnect/sdk-guide/#sdk-guide
+FROM rapid7/insightconnect-python-3-38-plugin:4
 
-# Add any custom package dependencies here
-# NOTE: Add pip packages to requirements.txt
-RUN apk add --no-cache libmagic
+LABEL organization=rapid7
+LABEL sdk=python
 
-# End package dependencies
-
-# Add source code
 WORKDIR /python/src
 ADD ./plugin.spec.yaml /plugin.spec.yaml
 ADD . /python/src
 
-# Install pip dependencies
 RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-# Install plugin
-RUN python setup.py build && python setup.py install
+RUN	python setup.py build && python setup.py install
+
+# User to run plugin code. The two supported users are: root, nobody
+USER nobody
 
 ENTRYPOINT ["/usr/local/bin/komand_thehive"]
