Update connection and requirements

--- a/plugins/thehive/Dockerfile
+++ b/plugins/thehive/Dockerfile
@@ -2,7 +2,10 @@ FROM rapid7/insightconnect-python-3-38-plugin:4
 
 LABEL organization=rapid7
 LABEL sdk=python
-#RUN apk add --no-cache libmagic
+# This fixes the issue related to an ImportError
+# ImportError: failed to find libmagic.  Check your installation
+# thehive4py depends on this module
+RUN apk add --no-cache libmagic
 
 WORKDIR /python/src
 ADD ./plugin.spec.yaml /plugin.spec.yaml
