--- a/plugins/thehive/plugin.spec.yaml
+++ b/plugins/thehive/plugin.spec.yaml
@@ -94,28 +94,45 @@ types:
   iobservable:
     dataType:
       title: Data Type
-      description: Observable data type e.g. domain, ip, url, fqdn, uri_path, user-agent,
-        hash, email, mail, mail_subject, registry, regexp, other
+      description: Observable data type
+      example: domain, ip, url, fqdn, uri_path, user-agent, hash, email, mail, mail_subject, registry, regexp, other
       type: string
     message:
+      title: Message
       description: Observable message
       type: string
     tlp:
       title: TLP
-      description: Traffic Light Protocol level, default is 2
+      description: Traffic Light Protocol level
+      enum:
+        - 0
+        - 1
+        - 2
+        - 3
       default: 2
       type: integer
+    pap:
+      title: PAP
+      description: Password Authentication Protocol
+      type: integer
+      enum:
+        - 0
+        - 1
+        - 2
+        - 3
+      default: 2
     tags:
       description: List of observable tags
       type: '[]string'
     ioc:
       title: IOC
-      description: Indicator of Compromise, default is 2
+      description: Indicator of Compromise
       default: false
       type: boolean
     data:
-      title: ID
-      description: The observable's value e.g. badguy.com
+      title: Data
+      description: The observable's value
+      example: badguy.com
       type: string
   userObject:
     status:
@@ -608,6 +625,31 @@ types:
       description: Time the observable was created at in milliseconds or epoch, e.g.
         1496561862924
       type: integer
+  inputShare:
+    organisation:
+      title: Organisation
+      description: Name or ID of the organisation
+      type: string
+    share:
+      title: Share
+      description: If true, new observables and tasks will also be shared to the organisation
+      type: boolean
+      default: true
+    profile:
+      title: Profile
+      description: Profile used to define the permissions of the organisation members
+      type: string
+      default: "analyst"
+    taskRule:
+      title: Task Rule
+      description: Sharing rule to apply to the tasks, can be manual or autoShare
+      type: string
+      default: "Sharing rule applied on the case"
+    observableRule:
+      title: Observable Rule
+      description: Sharing rule to apply to the observables, can be manual or autoShare
+      type: string
+      default: "Sharing rule applied on the case"
 actions:
   get_user_by_id:
     title: Get User By ID
@@ -732,6 +774,11 @@ actions:
         description: Case task
         type: '[]itask'
         required: false
+      sharingParameters:
+        title: Sharing Parameters
+        description: Array of objects (InputShare)
+        type: '[]inputShare'
+        required: false
       taskRule:
         title: Task Rule
         description: Case task rule
@@ -778,10 +825,10 @@ actions:
         type: string
         required: true
       observable:
-        type: iobservable
         title: Observable
-        required: true
         description: Observable
+        type: iobservable
+        required: true
     output:
       case:
         type: observable
